Refactor code style and remove unused classesonar qube updates